--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/a034d3d439.js" crossorigin="anonymous"></script>
+
     <title>SISTA</title>
 </head>
 
@@ -53,12 +56,6 @@
     <div class="container-fluid mt-4 mb-4">
         <section class="alur" id="home">
             <style>
-                @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
-
-                * {
-                    font-family: 'Inter', sans-serif !important;
-                }
-
                 body .alur {
                     background-color: #F9FCFC;
                 }
@@ -77,8 +74,8 @@
                     color: #0F52BA !important;
                 }
             </style>
-            <div class="container pb-4 px-4">
-                <div class="row text-center d-block pt-3 pb-md-4">
+            <div class="container pb-2 px-2">
+                <div class="row text-center d-block pt-2 pb-md-4">
                     <h3 class="desktop my-3">
                         Alur Seminar / Tugas Akhir
                     </h3>
@@ -90,47 +87,107 @@
                     <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
                         <h2> <span class="badge badge-primary">1</span> </h2>
                         <p class="font-weight-bold mt-4 mb-1 cl-blue">
-                            Pendaftaran
+                            Daftar TA
                         </p>
-                        <p class="mb-0">
-                            Daftarkan diri anda terlebih dahulu.
-                        </p>
+                        <div class="mb-0">
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> KHS - Lulus 110 SKS
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> IPK >= 2.0
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> Telah/Sedang Ambil Metode
+                                Penelitian
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> TTD Calon Pembimbing
+                            </p>
+                        </div>
                     </div>
                     <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
                         <h2> <span class="badge badge-primary">2</span></h2>
                         <p class="font-weight-bold mt-4 mb-1 cl-blue">
-                            Pilih jadwal
+                            Seminar Proposal
                         </p>
-                        <p class="mb-0">
-                            Pilih jadwal yang tersedia.
-                        </p>
+                        <div class="mb-0">
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> KHS - Lulus 110 SKS
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> IPK >= 2.0
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> Telah/Sedang Ambil Metode
+                                Penelitian
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> TTD Calon Pembimbing
+                            </p>
+                        </div>
                     </div>
                     <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
                         <h2> <span class="badge badge-primary">3</span></h2>
                         <p class="font-weight-bold mt-4 mb-1 cl-blue">
                             Gladi
                         </p>
-                        <p class="mb-0">
-                            Pelaksanaan gladi.
-                        </p>
+                        <div class="mb-0">
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> KHS - Lulus 110 SKS
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> IPK >= 2.0
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> Telah/Sedang Ambil Metode
+                                Penelitian
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> TTD Calon Pembimbing
+                            </p>
+                        </div>
                     </div>
                     <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
                         <h2> <span class="badge badge-primary">4</span></h2>
                         <p class="font-weight-bold mt-4 mb-1 cl-blue">
                             Seminar
                         </p>
-                        <p class="mb-0">
-                            Pelaksanaan seminar.
-                        </p>
+                        <div class="mb-0">
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> KHS - Lulus 110 SKS
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> IPK >= 2.0
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> Telah/Sedang Ambil Metode
+                                Penelitian
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> TTD Calon Pembimbing
+                            </p>
+                        </div>
                     </div>
                     <div class="col-md-3 p-4" onmouseover="coloringgoals(this)" onmouseout="normalgoals(this)">
                         <h2> <span class="badge badge-primary">5</span></h2>
                         <p class="font-weight-bold mt-4 mb-1 cl-blue">
                             Peresmian
                         </p>
-                        <p class="mb-0">
-                            Pelaksanaan peresmian.
-                        </p>
+                        <div class="mb-0">
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> KHS - Lulus 110 SKS
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> IPK >= 2.0
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> Telah/Sedang Ambil Metode
+                                Penelitian
+                            </p>
+                            <p>
+                                <i class="fas fa-check-square" style="color: lightgreen;"></i> TTD Calon Pembimbing
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
