--- a/index.html
+++ b/index.html
@@ -190,9 +190,10 @@
                                 <td class="text-center">10:00 <br>04-01-2022</td>
                                 <td class="text-center">
                                     10 &nbsp;
-                                    <button type="button" class="btn btn-primary btn-sm">
-                                        <i class="fas fa-eye"></i>
-                                    </button>
+                                    <a style="text-decoration: none;" href="DetailSeminar.html" type="button"
+                                        class="btn btn-primary btn-sm">
+                                        <i class="fas fa-eye" style="color:white"></i>
+                                    </a>
                                 </td>
                             </tr>
                             <tr>
@@ -210,9 +211,9 @@
                                 <td class="text-center">10:00 <br>04-01-2022</td>
                                 <td class="text-center">
                                     10 &nbsp;
-                                    <button type="button" class="btn btn-primary btn-sm">
-                                        <i class="fas fa-eye"></i>
-                                    </button>
+                                    <a style="text-decoration: none;" type="button" class="btn btn-primary btn-sm">
+                                        <i class="fas fa-eye" style="color:white"></i>
+                                    </a>
                                 </td>
                             </tr>
                             <tr>
@@ -230,9 +231,9 @@
                                 <td class="text-center">10:00 <br>04-01-2022</td>
                                 <td class="text-center">
                                     10 &nbsp;
-                                    <button type="button" class="btn btn-primary btn-sm">
-                                        <i class="fas fa-eye"></i>
-                                    </button>
+                                    <a style="text-decoration: none;" type="button" class="btn btn-primary btn-sm">
+                                        <i class="fas fa-eye" style="color:white"></i>
+                                    </a>
                                 </td>
                             </tr>
                         </table>
@@ -241,7 +242,7 @@
             </div>
         </section>
     </div>
-    <div class="card-footer bg-footer text-center">
+    <div class="card-footer bg-footer text-center pb-3">
         Copyright &copy;Elion Project 2022. All rights reserved
     </div>
 
