add form and edit daftar button

--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
                     <h2 class="mobile my-3">
                         Daftarkan diri anda segera!
                     </h2>
-                    <button type="button" class="btn btn-outline-primary btn-lg">
+                    <!-- <button type="button" class="btn btn-outline-primary btn-lg">
                         Daftar Seminar
-                    </button>
+                    </button> -->
+                    <a href="./daftar-seminar.html" target="_blank" class="btn btn-outline-primary btn-lg">Daftar Seminar</a>
                 </div>
             </div>
         </section>
