edit href in form

--- a/daftar-seminar.html
+++ b/daftar-seminar.html
@@ -70,19 +70,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
-            <a class="navbar-brand" href="#">SISTA</a>
+            <a class="navbar-brand" href="./index.html">SISTA</a>
             <ul class="navbar-nav text-white py-2">
                 <li class="nav-item">
-                    <a class="nav-link active text-navbar" href="#home">Home</a>
+                    <a class="nav-link active text-navbar" href="./index.html#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-navbar" href="#jadwalseminar">Jadwal</a>
+                    <a class="nav-link text-navbar" href="./index.html#jadwalseminar">Jadwal</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-navbar" href="#">Berita</a>
+                    <a class="nav-link text-navbar" href="./index.html#">Berita</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-navbar" href="#">About</a>
+                    <a class="nav-link text-navbar" href="./index.html#">About</a>
                 </li>
             </ul>
             <div>
