change href to daftar peserta and change content peserta seminar

--- a/daftar-peserta.html
+++ b/daftar-peserta.html
@@ -128,15 +128,15 @@
                 <table class="table borderless">
                   <tr>
                     <th scope="row">Nama</th>
-                    <td>: Mark John Doe</td>
+                    <td>: Abdul Rojaq</td>
                   </tr>
                   <tr>
                     <th scope="row">Judul</th>
-                    <td>: Merancang Web untuk Tracking Pasien Covid-19 di Pancoran Mas</td>
+                    <td>: Aplikasi Kesehatan Berbasi Android</td>
                   </tr>
                   <tr>
                     <th scope="row">Waktu</th>
-                    <td>: Senin, 31 January 2022</td>
+                    <td>: Selasa, 04 January 2022, 14:00</td>
                   </tr>
                 </table>
 
