--- a/DetailSeminar.html
+++ b/DetailSeminar.html
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn btn-primary">Daftar Peserta</a>
+            <a href="./daftar-peserta.html" class="btn btn-primary">Daftar Peserta</a>
         </section>
     </div>
     </div>
