--- a/registrasi.html
+++ b/registrasi.html
@@ -93,7 +93,7 @@
         </div>
     </nav>
      <!-- CONTENT -->
-     <div class="container">
+     <div class="container2">
         <h2>REGISTRASI</h2>
         <form>
             <div class="form-group row" style="display: flex;">
