rename file, move css to folder css

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="css/login.css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/a034d3d439.js" crossorigin="anonymous"></script>
     <!-- <style>
@@ -92,44 +92,44 @@
             </div>
         </div>
     </nav>
-     <!-- CONTENT -->
-     <div class="container">
+    <!-- CONTENT -->
+    <div class="container">
         <h2>LOGIN</h2>
         <form>
             <div class="form-group row">
-            <label for="username" class="col-4 col-form-label">Username</label> 
-            <div class="col-8">
-                <div class="input-group">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">
-                    <i class="fa fa-address-book-o"></i>
+                <label for="username" class="col-4 col-form-label">Username</label>
+                <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fa fa-address-book-o"></i>
+                            </div>
+                        </div>
+                        <input id="username" name="username" type="text" class="form-control">
                     </div>
-                </div> 
-                <input id="username" name="username" type="text" class="form-control">
                 </div>
             </div>
-            </div>
             <div class="form-group row">
-            <label for="password" class="col-4 col-form-label">Password</label> 
-            <div class="col-8">
-                <div class="input-group">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">
-                    <i class="fa fa-address-book"></i>
+                <label for="password" class="col-4 col-form-label">Password</label>
+                <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="fa fa-address-book"></i>
+                            </div>
+                        </div>
+                        <input id="password" name="password" type="password" class="form-control">
                     </div>
-                </div> 
-                <input id="password" name="password" type="password" class="form-control">
                 </div>
             </div>
-            </div> 
             <div class="form-group row">
-            <div class="offset-4 col-8">
-            <button name="submit" class="btn btn-primary">Masuk</button>
-            <a class="btn btn-primary" href="registrasi.html" role="button">Registrasi</a>
-            </div>
+                <div class="offset-4 col-8">
+                    <button name="submit" class="btn btn-primary">Masuk</button>
+                    <a class="btn btn-primary" href="registrasi.html" role="button">Registrasi</a>
+                </div>
             </div>
         </form>
-    </div>            
+    </div>
     <!-- AKHIR CONTENT -->
     <div class="card-footer bg-footer text-center footer-fixed">
         Copyright &copy;Elion Project 2022. All rights reserved
