edit href navbar

--- a/detail-seminar.html
+++ b/detail-seminar.html
@@ -84,13 +84,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
-            <a class="navbar-brand" href="#">SISTA</a>
+            <a class="navbar-brand" href="/">SISTA</a>
             <ul class="navbar-nav text-white py-2">
                 <li class="nav-item">
-                    <a class="nav-link active text-navbar" href="#home">Home</a>
+                    <a class="nav-link active text-navbar" href="/#home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-navbar" href="#jadwalseminar">Jadwal</a>
+                    <a class="nav-link text-navbar" href="/#jadwalseminar">Jadwal</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-navbar" href="#">Berita</a>
@@ -110,9 +110,9 @@
         <div class="bc-icons-2">
             <nav aria-label="breadcrumb" class="d-flex justify-content-end lighten">
                 <ol class="breadcrumb lighten-4">
-                    <li class="breadcrumb-item"><a class="black-text" href="./index.html#home">Home</a><i
+                    <li class="breadcrumb-item"><a class="black-text" href="/#home">Home</a><i
                             class="fas fa-angle-right mx-2" aria-hidden="true"></i></li>
-                    <li class="breadcrumb-item"><a class="black-text" href="./index.html#jadwal">Jadwal</a><i
+                    <li class="breadcrumb-item"><a class="black-text" href="./#jadwalseminar">Jadwal</a><i
                             class="fas fa-angle-right mx-2" aria-hidden="true"></i></li>
                     <li class="breadcrumb-item active">Detail</li>
                 </ol>
