--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-around" id="navbarNav">
-            <a class="navbar-brand" href="#">SISTA</a>
+            <a class="navbar-brand" href="/">SISTA</a>
             <ul class="navbar-nav text-white py-2">
                 <li class="nav-item">
                     <a class="nav-link active text-navbar" href="#home">Home</a>
@@ -79,9 +79,9 @@
                 </li>
             </ul>
             <div>
-                <button type="button" class="btn btn-success btn-lg">
+                <a href="login.html" class="btn btn-success btn-lg">
                     Login
-                </button>
+                </a>
             </div>
         </div>
     </nav>
@@ -159,7 +159,8 @@
                     <!-- <button type="button" class="btn btn-outline-primary btn-lg">
                         Daftar Seminar
                     </button> -->
-                    <a href="./daftar-seminar.html" target="_blank" class="btn btn-outline-primary btn-lg">Daftar Seminar</a>
+                    <a href="./daftar-seminar.html" target="_blank" class="btn btn-outline-primary btn-lg">Daftar
+                        Seminar</a>
                 </div>
             </div>
         </section>
