--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                 <td class="text-center">10:00 <br>04-01-2022</td>
                                 <td class="text-center">
                                     10 &nbsp;
-                                    <a style="text-decoration: none;" href="DetailSeminar.html" type="button"
+                                    <a style="text-decoration: none;" href="detail-seminar.html" type="button"
                                         class="btn btn-primary btn-sm">
                                         <i class="fas fa-eye" style="color:white"></i>
                                     </a>
@@ -213,7 +213,8 @@
                                 <td class="text-center">10:00 <br>04-01-2022</td>
                                 <td class="text-center">
                                     10 &nbsp;
-                                    <a style="text-decoration: none;" type="button" class="btn btn-primary btn-sm">
+                                    <a style="text-decoration: none;" href="detail-seminar.html" type="button"
+                                        class="btn btn-primary btn-sm">
                                         <i class="fas fa-eye" style="color:white"></i>
                                     </a>
                                 </td>
@@ -233,7 +234,8 @@
                                 <td class="text-center">10:00 <br>04-01-2022</td>
                                 <td class="text-center">
                                     10 &nbsp;
-                                    <a style="text-decoration: none;" type="button" class="btn btn-primary btn-sm">
+                                    <a style="text-decoration: none;" href="detail-seminar.html" type="button"
+                                        class="btn btn-primary btn-sm">
                                         <i class="fas fa-eye" style="color:white"></i>
                                     </a>
                                 </td>
