--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a class="nav-link text-navbar" href="#berita">Berita</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-navbar" href="#">About</a>
+                    <a class="nav-link text-navbar" href="#about">About</a>
                 </li>
             </ul>
             <div>
@@ -243,7 +243,11 @@
                         </table>
                     </div>
                 </div>
-                <div class="row text-center d-block pt-2 pb-md-5">
+            </div>
+        </section>
+        <section id="berita" class="h-100 w-100 bg-white" style="box-sizing: border-box">
+            <div class="container pb-md-5">
+                <div class="row text-center d-block pt-2 pb-md-4">
                     <h1 class="desktop my-3">
                         Berita
                     </h1>
@@ -251,36 +255,74 @@
                         Berita
                     </h2>
                 </div>
-                <div class="card-deck" id="berita">
+                <div class="card-deck">
                     <div class="card">
-                      <img class="card-img-top" src="https://images.unsplash.com/photo-1588702547919-26089e690ecc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Daftar Menjadi Peserta Seminar</h5>
-                        <p class="card-text">Anda bisa mengikuti kegiatan seminar yang teman-teman Anda selenggarakan.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 days ago</small></p>
-                      </div>
+                        <img class="card-img-top"
+                            src="https://images.unsplash.com/photo-1588702547919-26089e690ecc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Daftar Menjadi Peserta Seminar</h5>
+                            <p class="card-text">Anda bisa mengikuti kegiatan seminar yang teman-teman Anda
+                                selenggarakan.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 days ago</small></p>
+                        </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="https://images.unsplash.com/photo-1541339907198-e08756dedf3f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Beasiswa S2 ke Singapura</h5>
-                        <p class="card-text">Raih beasiswa untuk melanjutkan studi ke Singapura, terbuka untuk jurusan TI dan SI. Daftarkan diri Anda sebelum 28 Februari 2022.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
+                        <img class="card-img-top"
+                            src="https://images.unsplash.com/photo-1541339907198-e08756dedf3f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Beasiswa S2 ke Singapura</h5>
+                            <p class="card-text">Raih beasiswa untuk melanjutkan studi ke Singapura, terbuka untuk
+                                jurusan TI dan SI. Daftarkan diri Anda sebelum 28 Februari 2022.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Beasiswa Bootcamp Full Stack Developer</h5>
-                        <p class="card-text">Beasiswa pelatihan coding menjadi fullstack developer selama 3 bulan oleh Elion Academy.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
+                        <img class="card-img-top"
+                            src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Beasiswa Bootcamp Full Stack Developer</h5>
+                            <p class="card-text">Beasiswa pelatihan coding menjadi fullstack developer selama 3 bulan
+                                oleh Elion Academy.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about" class="h-100 w-100 bg-white" style="box-sizing: border-box">
+            <div class="container pb-md-5">
+                <div class="row text-center d-block pt-2 pb-md-4">
+                    <h1 class="desktop my-3">
+                        About
+                    </h1>
+                    <h2 class="mobile my-3">
+                        About
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <img src="asset/img//reading.png" width="85%" alt="Ilustrasi">
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <h3 class="text-center">SISTA</h3>
+                        <p>
+                            SISTA (Sistem Informasi Seminar Tugas Akhir) Adalah sebuah website yang dirancang untuk
+                            memantau informasi terkait seminara tugas akhir. Website ini bisa juga digunakan untuk
+                            mendaftar seminar tugas akhir, tapi sebelumnya harus melewati tahapan-tahapan yang sudah
+                            ditentukan sebelumnya. Website ini juga menyediakan informasi terupdate seputar perkuliahan
+                            bagi para mahasiswa semester akhir.
+                        </p>
+
                     </div>
                 </div>
             </div>
         </section>
     </div>
-    
+
     <div class="card-footer bg-footer text-center pb-3">
         Copyright &copy;Elion Project 2022. All rights reserved
     </div>
